ocp/tektoncd/fnt-frontend-template.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: fnt-frontend
  name: fnt-frontend
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: fnt-frontend
    deploymentconfig: fnt-frontend
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: fnt-frontend
        deploymentconfig: fnt-frontend
    spec:
      containers:
      - image: fnt-frontend:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: fnt-frontend
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - imageChangeParams:
      containerNames:
      - fnt-frontend
      from:
        kind: ImageStreamTag
        name: fnt-frontend:latest
        namespace: fntapp
    type: ImageChange
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fnt-frontend
  name: fnt-frontend
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: fnt-frontend
    deploymentconfig: fnt-frontend
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: fnt-frontend
  name: fnt-frontend
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: fnt-frontend
    weight: 100
